--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ deno_websocket = { version = "0.173.0", path = "./ext/websocket" }
 deno_webstorage = { version = "0.163.0", path = "./ext/webstorage" }
 node_resolver = { version = "0.7.0", path = "./ext/node_resolver" }
 
-aes = "=0.8.3"
+aes = "0.8.3"
 anyhow = "1.0.57"
 async-trait = "0.1.73"
 base32 = "=0.5.1"
@@ -177,7 +177,7 @@ tar = "=0.4.40"
 tempfile = "3.4.0"
 termcolor = "1.1.3"
 thiserror = "1.0.61"
-tokio = { version = "=1.36.0", features = ["full"] }
+tokio = { version = "1.36.0", features = ["full"] }
 tokio-metrics = { version = "0.3.0", features = ["rt"] }
 tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }
 tokio-socks = "0.5.1"
@@ -188,7 +188,7 @@ tower-lsp = { package = "deno_tower_lsp", version = "0.1.0", features = ["propos
 tower-service = "0.3.2"
 twox-hash = "=1.6.3"
 # Upgrading past 2.4.1 may cause WPT failures
-url = { version = "< 2.5.0", features = ["serde", "expose_internals"] }
+url = { version = "2.5.0", features = ["serde", "expose_internals"] }
 uuid = { version = "1.3.0", features = ["v4"] }
 webpki-roots = "0.26"
 which = "4.2.5"
