also build deno_runtime to a cdylib

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -31,6 +31,7 @@ only_snapshotted_js_sources = ["include_js_files_for_snapshotting"]
 [lib]
 name = "deno_runtime"
 path = "lib.rs"
+crate-type = ["cdylib", "rlib"]
 
 [[example]]
 name = "extension"
